fix project photo alignment

--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -106,7 +106,7 @@
   color: var(--green);
 }
 .project-image {
-  grid-area: 1/1/-1/8;
+  grid-area: 1/1/-1/7;
   position: relative;
   z-index: 1;
   height: 100%;
